# gis-test-web-app

./: Makefile  pyproject.toml
gis_web_app/: app.py
gis_web_app/static/: index.html
gis_web_app/static/js/: myApp.js
static/: index.html  style.css
static/js/: myApp.js
